Update OAuth2SuccessHandler.java